# peri

./: .gitignore  .mcp.json  CLAUDE.md  CORE_CONCEPT.md  Cargo.toml  README.md  SPEC_IMPROVE.md  TUI-STYLE.md  dev-acp.sh  prompts.md
acpx-g/: Cargo.toml  README.md  progress.md
agm/: Cargo.toml  README.md  install.ps1  install.sh
agm/src/: adapter.rs  config.rs  config_test.rs  error.rs  fs_util.rs  git.rs  installer.rs  installer_test.rs  lib.rs  main.rs  registry.rs  resolver.rs  store.rs  store_test.rs  types.rs  types_test.rs
agm/src/commands/: gc.rs  init.rs  install.rs  list.rs  mod.rs  publish.rs  self_update.rs  uninstall.rs  update.rs
agm/tests/: integration_test.rs
docs/: WRITING_STYLE.md  WRITING_TOPICS.md
docs/acp/: doc.md
langfuse-client/: Cargo.toml
langfuse-client/src/: batcher.rs  batcher_test.rs  client.rs  config.rs  config_test.rs  types.rs
langfuse-client/src/types/: conversion.rs  mod.rs
peri-acp/: Cargo.toml
peri-acp/src/agent/: builder.rs
peri-acp/src/broker/: transport_broker.rs
peri-acp/src/dispatch/: commands_test.rs  list_sessions.rs  session_fork.rs
peri-acp/src/event/: mapper.rs  mapper_test.rs
peri-acp/src/langfuse/: tracer.rs
peri-acp/src/langfuse/tracer/: compact_handler.rs  context.rs  event_builder.rs  llm_handler.rs  mod.rs  subagent_stack.rs  tool_handler.rs  trace_lifecycle.rs  tracer_test.rs  usage.rs
peri-acp/src/prompt/: mod.rs  prompt_test.rs
peri-acp/src/provider/: config.rs  config_test.rs  store.rs  store_test.rs
peri-acp/src/session/: agent_pool.rs  compact_runner.rs  event_sink.rs  executor.rs  executor_prediction_test.rs  executor_test.rs  frozen.rs  mod.rs  mod_test.rs  state_builders.rs
peri-acp/src/session/command/: bg.rs  bg_test.rs  compact.rs  compact_test.rs  mod.rs  mod_test.rs  rewind.rs  rewind_test.rs
peri-acp/src/session/command/compact/: events.rs  invariant.rs  pipeline.rs
peri-acp/src/session/goal_state/: mod.rs  mod_test.rs
peri-acp/src/transport/: mod.rs  mpsc.rs  stdio.rs  types.rs
peri-acp/tests/: concurrent_bg_agent_test.rs  integration_test.rs
peri-agent/: Cargo.toml
peri-cli/: README.md  package.json
peri-dag/: progress.md
peri-web-pty/: Cargo.toml  README.md  index.html
peri-web-pty/src/: config.rs  config_test.rs  http_routes.rs  http_routes_test.rs  lib.rs  main.rs  pty_session.rs  pty_session_test.rs  session_state.rs  ws_handler.rs  ws_handler_test.rs
peri-web-pty/tests/: ws_e2e_test.rs
peri-widgets/: Cargo.toml
peri-widgets/src/: bordered_panel.rs  lib.rs  link.rs  link_test.rs  list.rs  list_overlay.rs  list_overlay_test.rs  list_test.rs  radio_group.rs  scrollable.rs  scrollable_test.rs  tab_bar.rs
peri-widgets/src/diff/: mod.rs  renderer.rs
peri-widgets/src/file_tree/: render.rs  render_test.rs
peri-widgets/src/markdown/: cache.rs  cache_test.rs  highlight.rs  mod.rs  mod_test.rs  render_state.rs
peri-widgets/src/markdown/render_state/: coordinator.rs
peri-widgets/src/markdown/render_state/table/: builder.rs  layout.rs  mod.rs  render.rs  wrap.rs
peri-widgets/src/message_block/: mod.rs
peri-widgets/src/theme/: mod.rs  presets.rs
rust-agent-middlewares/: Cargo.toml
rust-agent-middlewares/src/: agents_md.rs  lib.rs
rust-agent-middlewares/src/ask_user/: mod.rs
rust-agent-middlewares/src/cron/: mod.rs
rust-agent-middlewares/src/hitl/: auto_classifier.rs  mod.rs  mod_test.rs
rust-agent-middlewares/src/hooks/: executor.rs  middleware.rs  middleware_test.rs  output_parser.rs  types.rs
rust-agent-middlewares/src/mcp/: auth_store.rs  callback_server.rs  client.rs  config.rs  middleware.rs  mod.rs  oauth_flow.rs  resource_tool.rs  tool_bridge.rs  transport.rs
rust-agent-middlewares/src/middleware/: filesystem.rs  terminal.rs
rust-agent-middlewares/src/plugin/: config.rs  loader.rs  marketplace.rs  mod.rs  types.rs
rust-agent-middlewares/src/subagent/: background.rs  mod.rs  skill_preload.rs  tool.rs  tool_test.rs
rust-agent-middlewares/src/tools/: ask_user_tool.rs  mod.rs  todo.rs
rust-agent-middlewares/src/tools/filesystem/: edit.rs  glob.rs  grep.rs  grep_test.rs  read.rs  write.rs
rust-agent-middlewares/tests/: middleware_tool_registration.rs
rust-agent-tui/: Cargo.toml
rust-agent-tui/src/: event.rs  lib.rs  main.rs  prompt.rs  prompt_test.rs
rust-agent-tui/src/acp/: agent_assembler.rs  broker.rs  dispatch.rs  event_mapper.rs  main_acp.rs  request_handler.rs  session.rs
rust-agent-tui/src/app/: agent.rs  agent_comm.rs  agent_compact.rs  agent_events_bg.rs  agent_ops.rs  agent_panel.rs  agent_submit.rs  ask_user_ops.rs  ask_user_prompt.rs  config_panel.rs  cron_ops.rs  cron_state.rs  hint_ops.rs  login_panel.rs  mcp_panel.rs  message_pipeline.rs  message_pipeline_test.rs  message_state.rs  mod.rs  model_panel.rs  panel_ops.rs  plugin_panel.rs  setup_wizard.rs  thread_ops.rs
rust-agent-tui/src/command/: doctor.rs  effort.rs  help.rs  loop_cmd.rs  mod.rs  rename.rs
rust-agent-tui/src/config/: types.rs  types_test.rs
rust-agent-tui/src/ui/: headless.rs  headless_test.rs  main_ui.rs  message_render.rs  message_view.rs  message_view_test.rs  render_thread.rs  tips.rs  welcome.rs
rust-agent-tui/src/ui/main_ui/: status_bar.rs
rust-agent-tui/src/ui/main_ui/panels/: agent.rs  config.rs  cron.rs  login.rs  mcp.rs  memory.rs  model.rs  plugin.rs  status.rs  thread_browser.rs
rust-agent-tui/src/ui/main_ui/popups/: ask_user.rs  hints.rs  hitl.rs  oauth.rs  setup_wizard.rs
side-projects/git-graph/: Cargo.toml
side-projects/git-graph/src/: app.rs  event.rs  main.rs  render.rs  theme.rs  update.rs
side-projects/git-graph/src/editor/: mod.rs
side-projects/git-graph/src/git/: ops.rs  repo.rs  stash.rs
side-projects/git-graph/src/graph/: color.rs  layout.rs  render.rs  topology.rs
side-projects/git-graph/src/ui/: confirm.rs  detail_panel.rs  file_preview.rs  file_search.rs  filter_bar.rs  graph_panel.rs  overlay.rs  search_bar.rs  syntax.rs  toast.rs  toolbar.rs
side-projects/git-graph/src/ui/sidebar/: file_tree_panel.rs  mod.rs  status_panel.rs
side-projects/git-graph/tests/: integration_test.rs
(+761 files in other folders)
