[package]
name = "agm"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agm"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs-next.workspace = true
clap.workspace = true
semver.workspace = true
sha2.workspace = true
flate2 = "1"
tar = "0.4"
