[package]
name = "langfuse-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
base64 = { version = "0.22", features = ["alloc"] }
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
temp-env = "0.3"
mockito = "1"
