[package]
name = "peri-web-pty"
version.workspace = true
edition.workspace = true

[lib]
name = "peri_web_pty"
path = "src/lib.rs"

[[bin]]
name = "peri-web-pty"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
portable-pty = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio-tungstenite = { workspace = true }
serial_test = { workspace = true }
