[package]
name = "peri-widgets"
version.workspace = true
edition.workspace = true
description = "Reusable ratatui widget library for Peri"

[dependencies]
ratatui = { version = ">=0.30", features = ["unstable-rendered-line-info", "unstable-widget-ref"] }
pulldown-cmark = { version = "0.13", optional = true }
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
], optional = true }
unicode-width = "0.2"
rand = "0.10"
similar = "3"
lru.workspace = true
parking_lot.workspace = true

[features]
default = []
markdown = ["pulldown-cmark"]
markdown-highlight = ["markdown", "dep:syntect"]
