[package]
name = "rust-agent-middlewares"
version = "0.1.0"
edition = "2021"
description = "Rust Agent middleware implementations, aligned with @langgraph-js/agent-middlewares"
license = "MIT"

[dependencies]
rust-create-agent = { path = "../rust-create-agent" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
glob = "0.3"
walkdir = "2.4"
ignore = "0.4"
gray_matter = "0.3"
dirs-next.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
uuid.workspace = true
croner = "3"
tracing.workspace = true
parking_lot.workspace = true
grep = "0.4"
num_cpus = "1"
rmcp = { version = "1.6", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "auth",
] }
reqwest.workspace = true
url.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
