[package]
name = "gig"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.1"
crossterm = "0.29"
git2 = { version = "0.21", features = ["vendored-openssl"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
arboard = "3"
unicode-width = "0.2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
ropey = "1"
peri-widgets = { path = "../../peri-widgets" }
sysinfo = "0.39"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
